# nrf-impact-assess-worker

./: .gitignore  .ruff.toml  Dockerfile  README.md  compose.yml  logging-dev.json  logging.json  pyproject.toml  sonar-project.properties
.claude/: settings.local.json
.github/workflows/: check-pull-request.yml  publish.yml
alembic/: env.py
alembic/versions/: 45ce553d0710_add_gcn_spatial_layer_types.py  6a7baea82d03_initial_version.py
app/: config.py  main.py
app/example/: router.py  test_router.py
compose/: aws.env  init-localstack.sh
docs/: architecture.md  configuration.md  creating-assessments.md  data-inventory.md  deployment.md  local-development.md  optimisation.md  repository-design.md  spatial-operations.md  testing-strategy.md
scripts/: .env.example  load_data.py  local-test.sh  settings.py  start-local-services.sh  start_dev_server.sh  submit_job.py  test-submit-job.sh
tests/: __init__.py  utils.py
tests/integration/: conftest.py  test_gcn_with_runner.py  test_repository.py
tests/regression/: conftest.py  test_gcn_regression.py  test_nutrient_regression.py
tests/unit/: test_calculators.py  test_config.py  test_job_models.py  test_models.py
worker/: __init__.py  api.py  config.py  debug.py  health.py  main.py  orchestrator.py
worker/api/: __init__.py  health_router.py  test_router.py
worker/assessments/: gcn.py  nutrient.py
worker/aws/: s3.py  sqs.py
worker/calculators/: __init__.py  buffering.py  land_use.py  suds.py  wastewater.py
worker/common/: __init__.py  log_utils.py  metrics.py  tls.py  tracing.py
worker/models/: __init__.py  db.py  domain.py  job.py
worker/outputs/: __init__.py  base.py  csv.py
worker/repositories/: __init__.py  engine.py  repository.py
worker/runner/: __init__.py  runner.py
(+45 files in other folders)
