[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nrf-impact-assess-worker"
version = "0.2.0"
description = "nrf-impact-assess-worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "alembic-postgresql-enum>=1.9.0",
    "boto3==1.42.44",
    "email-validator>=2.2.0",
    "fastapi==0.128.0",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.2",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.18",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "typer>=0.19.2",
    "asgi-logger==0.1.0",
    "aws-embedded-metrics==3.3.1",
    "dnspython==2.7.0",
    "ecs-logging==2.2.0",
    "httpx==0.28.1",
    "uvicorn==0.40.0",
]

[tool.setuptools.packages.find]
include = ["worker*"]
exclude = ["legacy*", "iat_input*", "alembic*", "tests*"]

[dependency-groups]
dev = [
    "moto[s3,sqs]>=5.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock>=3.15.1",
    "ruff==0.11.13",
    "taskipy==1.14.1",
]

[tool.uv]
package = true

[tool.taskipy.tasks]
format = "uv run ruff format . && uv run ruff check . --fix"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["worker", "tests"]
markers = [
    "integration: marks tests as integration tests (use test database with small fixtures)",
    "regression: marks tests as regression tests (use production database with full data)",
]
addopts = [
    "-m", "not integration and not regression",
    "--cov=worker",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:coverage_html",
]
